--- a/index.html
+++ b/index.html
@@ -4,7 +4,87 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-      <link>
-      </head>
-    <body>
+    <title>Food LLC - Our Menu</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+              <span class="humburger">&#9776</span>
+            </button>
+          </div>
+  
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+          
+            <li class="visible-xs active">
+              <a href="#chicken"><br class="hidden-xs"> Chicken</a>
+            </li>
+            <li class="visible-xs active">
+              <a href="#beef"><br class="hidden-xs"> Beef</a>
+            </li>
+            <li class="visible-xs active">
+              <a href="#sushi"><br class="hidden-xs"> Sushi</a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
+<body>
+  <div id="main-content" class="container">
+    <div id="page-heading" class="row text-center">
+      <div class="col-md-12 col-sm 12 col-xs-12">
+        <h2>Our Menu</h2>
+      </div>
+    </div>
+
+    <div id="item-list" class="col-md-12 col-sm-12 col-xs-12">
+      <div id="chicken" class="item-title text-center">
+          <h3>Chicken</h3>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At augue eget arcu dictum. Fermentum odio eu feugiat pretium nibh ipsum. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Suscipit tellus mauris a diam maecenas. Etiam sit amet nisl purus in mollis nunc. Ornare massa eget egestas purus viverra. Ac auctor augue mauris augue neque gravida in fermentum. Sodales neque sodales ut etiam sit amet nisl purus in. Sit amet est placerat in egestas erat imperdiet sed euismod. Viverra aliquet eget sit amet tellus cras adipiscing. In hac habitasse platea dictumst vestibulum rhoncus est. Vitae congue eu consequat ac felis donec et odio pellentesque. Dui ut ornare lectus sit amet est placerat.<br><br>Donec massa sapien faucibus et molestie ac feugiat. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Donec ac odio tempor orci dapibus. Ipsum dolor sit amet consectetur adipiscing elit. Leo vel fringilla est ullamcorper eget. Nunc scelerisque viverra mauris in aliquam. Turpis massa tincidunt dui ut ornare. Nunc congue nisi vitae suscipit tellus mauris a diam maecenas. Facilisi cras fermentum odio eu feugiat pretium. Vitae purus faucibus ornare suspendisse sed nisi. Felis eget nunc lobortis mattis aliquam faucibus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Risus feugiat in ante metus. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Nibh cras pulvinar mattis nunc sed blandit.</p>
+      </div>
+
+      <div id="item-list" class="col-md-12 col-sm-12 col-xs-12">
+        <div id="beef" class="item-title text-center">
+          <h3>Beef</h3>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At augue eget arcu dictum. Fermentum odio eu feugiat pretium nibh ipsum. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Suscipit tellus mauris a diam maecenas. Etiam sit amet nisl purus in mollis nunc. Ornare massa eget egestas purus viverra. Ac auctor augue mauris augue neque gravida in fermentum. Sodales neque sodales ut etiam sit amet nisl purus in. Sit amet est placerat in egestas erat imperdiet sed euismod. Viverra aliquet eget sit amet tellus cras adipiscing. In hac habitasse platea dictumst vestibulum rhoncus est. Vitae congue eu consequat ac felis donec et odio pellentesque. Dui ut ornare lectus sit amet est placerat.<br><br>Donec massa sapien faucibus et molestie ac feugiat. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Donec ac odio tempor orci dapibus. Ipsum dolor sit amet consectetur adipiscing elit. Leo vel fringilla est ullamcorper eget. Nunc scelerisque viverra mauris in aliquam. Turpis massa tincidunt dui ut ornare. Nunc congue nisi vitae suscipit tellus mauris a diam maecenas. Facilisi cras fermentum odio eu feugiat pretium. Vitae purus faucibus ornare suspendisse sed nisi. Felis eget nunc lobortis mattis aliquam faucibus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Risus feugiat in ante metus. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Nibh cras pulvinar mattis nunc sed blandit.</p>
+      </div>
+
+      <div id="item-list" class="col-md-12 col-sm-12 col-xs-12">
+        <div id="sushi" class="item-title text-center">
+          <h3>Sushi</h3>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At augue eget arcu dictum. Fermentum odio eu feugiat pretium nibh ipsum. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Suscipit tellus mauris a diam maecenas. Etiam sit amet nisl purus in mollis nunc. Ornare massa eget egestas purus viverra. Ac auctor augue mauris augue neque gravida in fermentum. Sodales neque sodales ut etiam sit amet nisl purus in. Sit amet est placerat in egestas erat imperdiet sed euismod. Viverra aliquet eget sit amet tellus cras adipiscing. In hac habitasse platea dictumst vestibulum rhoncus est. Vitae congue eu consequat ac felis donec et odio pellentesque. Dui ut ornare lectus sit amet est placerat.<br><br>Donec massa sapien faucibus et molestie ac feugiat. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Donec ac odio tempor orci dapibus. Ipsum dolor sit amet consectetur adipiscing elit. Leo vel fringilla est ullamcorper eget. Nunc scelerisque viverra mauris in aliquam. Turpis massa tincidunt dui ut ornare. Nunc congue nisi vitae suscipit tellus mauris a diam maecenas. Facilisi cras fermentum odio eu feugiat pretium. Vitae purus faucibus ornare suspendisse sed nisi. Felis eget nunc lobortis mattis aliquam faucibus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Risus feugiat in ante metus. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Nibh cras pulvinar mattis nunc sed blandit.</p>
+      </div>
+    </div>
+  </div>
+<footer class="panel-footer">
+  <div class="container">
+    <div class="row">
+      <section id="footer-info" class="col-md-12 col-sm 12 col-xs-12">
+        <p>Module 3 Assignment Created for Coursera Course HTML, CSS, and Javascript for Web Developers by Johns Hopkins University by Matthew Cassar Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.</p>
+      </section>
+    </div>
+  </div>
+</footer>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+
+</body>
+</html>
+
